# molarmasscalculator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/xpm/: icon.xpm
sources/: CompoundTextArea.cpp  CompoundTextArea.h  Element.cpp  Element.h  ElementBox.cpp  ElementBox.h  ElementListBox.cpp  ElementListBox.h  ElementResultsList.cpp  ElementResultsList.h  ElementResultsListEntry.cpp  ElementResultsListEntry.h  EventHandler.cpp  EventHandler.h  MainApp.cpp  MainApp.h  MainFrame.cpp  MainFrame.h  MolarMass.cpp  MolarMass.h  PaintWindow.cpp  PaintWindow.h  TotalTextOutput.cpp  TotalTextOutput.h  main.cpp
